# Minute-Maker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  TESTING.md  UI_DEFINITION.md  app.js  export_docx.py  index.html  main.py  pyproject.toml  pytest.ini  qwen_minutes.py  requirements-dev.txt  requirements.txt  styles.css  test.bat  transcribe.py
.github/workflows/: ci.yml  test.yml
scripts/: check_qwen.py  check_whisper.py  dev.ps1  findstring.py  gen_sample_audio.py  setup_test_env.bat  setup_whisper.py  test_runner.py
src/: __init__.py  server.py
src/audio/: __init__.py  whisper_service.py
src/config/: __init__.py  load_env.py  secrets.py  whisper_config.py
src/core/: __init__.py  transcription_manager.py
src/utils/: __init__.py  audio_utils.py
tests/: __init__.py  conftest.py  test_example_module.py  test_integration.py  test_secrets.py
