[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minute-maker"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = []
description = "Minute Maker project"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
